# plutus-project-template

./: .gitignore  README.md  hie.yaml  project-template.cabal
app/: Main.hs
src/: Compile.hs  ContractError.hs  Gift.hs  TokenOnChain.hs  Utils.hs
v0.1.0/: README.md  cabal.project
v0.1.0/src/: OnChainGift.hs
v1.0.0-alpha1/: cabal.project  project-template.cabal
v1.0.0-alpha1/app/: Main.hs
v1.0.0-alpha1/src/: OffChainGift.hs
